--- a/Parse-Starter-Project-1-2/ParseStarterProject/src/main/res/layout/activity_login.xml
+++ b/Parse-Starter-Project-1-2/ParseStarterProject/src/main/res/layout/activity_login.xml
@@ -31,5 +31,6 @@
         android:text="loginUser"
         android:id="@+id/loginUserBtt"
         android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        />
 </RelativeLayout>
