--- a/Parse-Starter-Project-1-2/ParseStarterProject/src/main/res/layout/activity_main.xml
+++ b/Parse-Starter-Project-1-2/ParseStarterProject/src/main/res/layout/activity_main.xml
@@ -47,8 +47,24 @@
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="200dp"
         android:layout_below="@+id/linearLayout"
-        android:layout_centerHorizontal="true"></LinearLayout>
+        android:layout_centerHorizontal="true">
+
+        <ListView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:id="@+id/listView"
+            tools:listitem="@android:layout/simple_list_item_1" />
+    </LinearLayout>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="New Text"
+        android:id="@+id/textView3"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="126dp" />
 
 </RelativeLayout>
