--- a/Parse-Starter-Project-1-2/ParseStarterProject/src/main/res/layout/activity_main.xml
+++ b/Parse-Starter-Project-1-2/ParseStarterProject/src/main/res/layout/activity_main.xml
@@ -47,14 +47,15 @@
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="fill_parent"
         android:layout_below="@+id/linearLayout"
-        android:layout_centerHorizontal="true">
+        android:layout_centerHorizontal="true"
+        android:layout_above="@+id/textView3">
 
         <ListView
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:id="@+id/listView"
+            android:layout_height="fill_parent"
+            android:id="@+id/postListView"
             tools:listitem="@android:layout/simple_list_item_1" />
     </LinearLayout>
 
@@ -63,8 +64,8 @@
         android:layout_height="wrap_content"
         android:text="New Text"
         android:id="@+id/textView3"
+        android:layout_marginBottom="35dp"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="126dp" />
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
