--- a/Parse-Starter-Project-1-2/ParseStarterProject/src/main/res/layout/the_post_layouts.xml
+++ b/Parse-Starter-Project-1-2/ParseStarterProject/src/main/res/layout/the_post_layouts.xml
@@ -1,54 +1,149 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:weightSum="1">
 
-    <RelativeLayout
+    <LinearLayout
+        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="400dp">
+        android:layout_height="50dp"
+        android:layout_gravity="center_horizontal">
 
-        <ImageButton
-            android:layout_width="170dp"
-            android:layout_height="170dp"
-            android:id="@+id/imageButton"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_marginTop="55dp"
-            android:layout_marginLeft="20dp" />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-        <ImageButton
-            android:layout_width="170dp"
-            android:layout_height="170dp"
-            android:id="@+id/imageButton2"
-            android:layout_alignBottom="@+id/imageButton"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginRight="20dp" />
+            <ImageView
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:id="@+id/userPicture"
+                android:layout_margin="7dp"
+                android:src="@android:drawable/btn_star_big_on" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="0"
-            android:id="@+id/textView2"
-            android:layout_marginTop="92dp"
-            android:layout_below="@+id/imageButton"
-            android:layout_alignLeft="@+id/imageButton"
-            android:layout_alignStart="@+id/imageButton"
-            android:layout_marginLeft="72dp"
-            android:layout_marginStart="72dp"
-            android:textSize="75dp" />
+            <TextView
+                android:layout_width="fill_parent"
+                android:layout_height="50dp"
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="0"
-            android:id="@+id/textView4"
-            android:layout_alignTop="@+id/textView2"
-            android:layout_alignRight="@+id/imageButton2"
-            android:layout_alignEnd="@+id/imageButton2"
-            android:layout_marginRight="68dp"
-            android:layout_marginEnd="68dp"
-            android:textSize="75dp" />
-    </RelativeLayout>
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="Username"
+                android:id="@+id/userName2"
+                android:layout_gravity="center_horizontal"
+                android:layout_alignTop="@+id/userPicture"
+                android:layout_toRightOf="@+id/userPicture"
+                android:layout_toEndOf="@+id/userPicture"
+                android:layout_marginTop="7dp" />
+        </RelativeLayout>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="165dp">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <ImageView
+                android:layout_width="170dp"
+                android:layout_height="150dp"
+                android:id="@+id/imageVote1"
+                android:layout_marginTop="5dp"
+                android:layout_marginRight="5dp"
+                android:layout_marginBottom="5dp"
+                android:layout_marginLeft="18dp"
+                android:adjustViewBounds="true"/>
+
+            <ImageView
+                android:layout_width="170dp"
+                android:layout_height="150dp"
+                android:id="@+id/imageVote2"
+                android:paddingBottom="10dp"
+                android:layout_alignTop="@+id/imageVote1"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true"
+                android:layout_marginRight="18dp"
+                android:adjustViewBounds="true"
+                android:layout_marginBottom="5dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginLeft="5dp" />
+
+        </RelativeLayout>
+    </LinearLayout>
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="50dp">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="fill_parent"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="0"
+                android:id="@+id/voteNumber1"
+                android:layout_marginLeft="87dp"
+                android:textAlignment="center"
+                android:padding="10dp"
+                android:layout_marginStart="87dp"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="fill_parent"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="0"
+                android:id="@+id/voteNumber2"
+                android:layout_marginRight="81dp"
+                android:padding="10dp"
+                android:layout_marginEnd="81dp"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true" />
+        </RelativeLayout>
+    </LinearLayout>
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="110dp">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="29dp"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="Username:"
+                android:id="@+id/userName3"
+                android:layout_gravity="center_horizontal"
+
+                android:layout_marginTop="7dp"
+                android:layout_marginLeft="18dp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="100dp"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="users description"
+                android:id="@+id/userDescription"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true"
+                android:layout_toRightOf="@+id/userName3"
+                android:layout_toEndOf="@+id/userName3"
+                android:layout_alignTop="@+id/userName3"
+                android:paddingTop="2dp"
+                android:paddingLeft="5dp" />
+        </RelativeLayout>
+    </LinearLayout>
 </LinearLayout>
