--- a/Parse-Starter-Project-1-2/ParseStarterProject/src/main/res/layout/activity_welcome.xml
+++ b/Parse-Starter-Project-1-2/ParseStarterProject/src/main/res/layout/activity_welcome.xml
@@ -1,70 +1,110 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:orientation="vertical"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.parse.starter.WelcomeActivity">
+    tools:context="com.parse.starter.WelcomeActivity"
+    android:background="@drawable/background">
 
-    <Button
-        android:layout_width="155dp"
-        android:layout_height="65dp"
-        android:text="Login"
-        android:id="@+id/loginBtt"
-        android:textSize="25dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="101dp" />
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="150dp">
 
-    <Button
-        android:layout_width="155dp"
-        android:layout_height="65dp"
-        android:text="Sign Up"
-        android:id="@+id/signUpBttn"
-        android:textSize="25dp"
-        android:layout_alignTop="@+id/loginBtt"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Social Picker"
-        android:id="@+id/textView"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="46dp"
-        android:textSize="45dp" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="Social Picker"
+                android:id="@+id/textView"
+                android:textSize="45dp"
+                android:layout_centerVertical="true"
+                android:layout_centerHorizontal="true" />
+        </RelativeLayout>
+    </LinearLayout>
 
-    <EditText
-        android:layout_width="280dp"
-        android:layout_height="wrap_content"
-        android:id="@+id/userName"
-        android:layout_below="@+id/textView"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="64dp"
-        android:hint="username"/>
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="120dp">
 
-    <EditText
-        android:layout_width="280dp"
-        android:layout_height="wrap_content"
-        android:id="@+id/password"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
-        android:hint="password"/>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Forgot Password?"
-        android:id="@+id/forgotPassword"
-        android:layout_below="@+id/signUpBttn"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="30dp"
-        android:textSize="20dp"
-        android:onClick="forgotPassword"
-        android:clickable="true"/>
+            <EditText
+                android:layout_width="fill_parent"
+                android:layout_height="50dp"
+                android:id="@+id/userName"
 
-</RelativeLayout>
+                android:hint="username"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:background="@drawable/roundedrectangle"
+                />
+
+            <EditText
+                android:layout_width="fill_parent"
+                android:layout_height="50dp"
+                android:id="@+id/password"
+                android:hint="password"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:background="@drawable/roundedrectangle"
+                />
+        </RelativeLayout>
+    </LinearLayout>
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="200dp">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <Button
+                android:layout_width="155dp"
+                android:layout_height="65dp"
+                android:text="Login"
+                android:id="@+id/loginBtt"
+                android:textSize="25dp"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_marginBottom="101dp" />
+
+            <Button
+                android:layout_width="155dp"
+                android:layout_height="65dp"
+                android:text="Sign Up"
+                android:id="@+id/signUpBttn"
+                android:textSize="25dp"
+                android:layout_alignTop="@+id/loginBtt"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Forgot Password?"
+                android:id="@+id/forgotPassword"
+                android:layout_below="@+id/signUpBttn"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="30dp"
+                android:textSize="20dp"
+                android:onClick="forgotPassword"
+                android:clickable="true"/>
+        </RelativeLayout>
+    </LinearLayout>
+
+</LinearLayout>
