--- a/Parse-Starter-Project-1-2/ParseStarterProject/src/main/res/layout/activity_main.xml
+++ b/Parse-Starter-Project-1-2/ParseStarterProject/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
                 android:paddingTop="@dimen/activity_vertical_margin"
                 android:paddingBottom="@dimen/activity_vertical_margin"
                 tools:context=".MainActivity"
-                >
+                android:background="#D9DEDD">
 
     <LinearLayout
         android:orientation="horizontal"
@@ -38,7 +38,7 @@
         <ImageView
             android:layout_width="25dp"
             android:layout_height="25dp"
-            android:id="@+id/imageView"
+            android:id="@+id/userIcon"
             android:src="@drawable/user_icon"
             />
 
@@ -48,33 +48,19 @@
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="match_parent"
         android:layout_below="@+id/linearLayout"
-        android:layout_centerHorizontal="true"
-        android:layout_above="@+id/textView3">
+        android:layout_centerHorizontal="true">
 
         <ListView
             android:layout_width="wrap_content"
             android:layout_height="fill_parent"
             android:id="@+id/postListView"
-            tools:listitem="@android:layout/simple_list_item_1" />
+            tools:listitem="@android:layout/simple_list_item_1"
+            android:divider="#0D2D26"
+            android:dividerHeight="4px"
+            android:background="#D9DEDD"
+            />
     </LinearLayout>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="New Text"
-        android:id="@+id/textView3"
-        android:layout_marginBottom="35dp"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" />
-
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/testView"
-        android:layout_above="@+id/textView3"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="110dp" />
 
 </RelativeLayout>
