--- a/Parse-Starter-Project-1-2/ParseStarterProject/src/main/res/layout/the_post_layouts.xml
+++ b/Parse-Starter-Project-1-2/ParseStarterProject/src/main/res/layout/the_post_layouts.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:weightSum="1">
+    android:weightSum="1"
+    android:background="#FFFFFF">
 
     <LinearLayout
         android:orientation="horizontal"
@@ -40,24 +41,27 @@
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="165dp">
+        android:layout_height="165dp"
+        >
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
             <ImageView
-                android:layout_width="170dp"
+                android:layout_width="150dp"
                 android:layout_height="150dp"
                 android:id="@+id/imageVote1"
                 android:layout_marginTop="5dp"
                 android:layout_marginRight="5dp"
                 android:layout_marginBottom="5dp"
                 android:layout_marginLeft="18dp"
-                android:adjustViewBounds="true"/>
+                android:adjustViewBounds="true"
+                android:background="@drawable/commentback"
+                android:onClick="voteForOne"/>
 
             <ImageView
-                android:layout_width="170dp"
+                android:layout_width="150dp"
                 android:layout_height="150dp"
                 android:id="@+id/imageVote2"
                 android:paddingBottom="10dp"
@@ -67,9 +71,10 @@
                 android:layout_marginRight="18dp"
                 android:adjustViewBounds="true"
                 android:layout_marginBottom="5dp"
-                android:layout_marginTop="5dp"
+                android:layout_marginTop="0dp"
                 android:layout_marginLeft="5dp"
-                />
+                android:background="@drawable/commentback"
+                android:onClick="voteForTwo"/>
 
         </RelativeLayout>
     </LinearLayout>
@@ -77,7 +82,8 @@
     <LinearLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="50dp">
+        android:layout_height="50dp"
+        >
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -95,7 +101,8 @@
                 android:layout_marginStart="87dp"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true" />
+                android:layout_alignParentStart="true"
+                android:onClick="voteForOne"/>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -108,7 +115,8 @@
                 android:layout_marginEnd="81dp"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentRight="true"
-                android:layout_alignParentEnd="true" />
+                android:layout_alignParentEnd="true"
+                android:onClick="voteForTwo"/>
         </RelativeLayout>
     </LinearLayout>
 
@@ -146,5 +154,42 @@
                 android:paddingTop="2dp"
                 android:paddingLeft="5dp" />
         </RelativeLayout>
+    </LinearLayout>
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="fill_parent"
+        android:layout_height="100dp">
+
+        <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:text="New Text"
+            android:id="@+id/commentSection"
+            android:background="@drawable/commentback"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <EditText
+            android:layout_width="250dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/comment"
+            android:hint="waffle with them!"
+            android:inputType="textMultiLine"
+            android:maxLength="21"
+            android:maxLines="4"
+            />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Send"
+            android:id="@+id/sendComment" />
+
     </LinearLayout>
 </LinearLayout>
