--- a/Parse-Starter-Project-1-2/ParseStarterProject/src/main/res/layout/activity_sign_up.xml
+++ b/Parse-Starter-Project-1-2/ParseStarterProject/src/main/res/layout/activity_sign_up.xml
@@ -4,60 +4,75 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.parse.starter.SignUpActivity">
+    tools:context="com.parse.starter.SignUpActivity"
+    android:background="#1D8D77">
 
     <EditText
-        android:layout_width="280dp"
-        android:layout_height="wrap_content"
+        android:layout_width="fill_parent"
+        android:layout_height="50dp"
         android:id="@+id/usernameSignupEdt"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="50dp"
         android:hint="username"
         android:textAlignment="center"
         android:layout_below="@+id/textView"
-        android:layout_alignLeft="@+id/signupBtt"
-        android:layout_alignStart="@+id/signupBtt" />
+        android:background="@drawable/roundedrectangle"
+        android:layout_marginBottom="25dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
     <EditText
-        android:layout_width="280dp"
-        android:layout_height="wrap_content"
+        android:layout_width="fill_parent"
+        android:layout_height="50dp"
         android:inputType="textPassword"
         android:ems="10"
         android:id="@+id/passwordSignupEdt"
         android:hint="password"
         android:layout_below="@+id/usernameSignupEdt"
         android:layout_alignLeft="@+id/usernameSignupEdt"
-        android:layout_alignStart="@+id/usernameSignupEdt" />
+        android:layout_alignStart="@+id/usernameSignupEdt"
+        android:background="@drawable/roundedrectangle"/>
 
     <Button
-        android:layout_width="280dp"
+        android:layout_width="150dp"
         android:layout_height="65dp"
-        android:text="Create Account"
         android:id="@+id/signupBtt"
         android:layout_below="@+id/password_again_edit_text"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="39dp" />
+        android:layout_marginTop="20dp"
+        android:background="@drawable/createbttn"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Password"
+        android:id="@+id/textView5"
+        android:layout_above="@+id/passwordSignupEdt"
+        android:layout_alignRight="@+id/textView3"
+        android:layout_alignEnd="@+id/textView3" />
 
     <EditText
-        android:layout_width="280dp"
-        android:layout_height="wrap_content"
+        android:layout_width="fill_parent"
+        android:layout_height="50dp"
         android:inputType="textPassword"
         android:ems="10"
         android:id="@+id/password_again_edit_text"
         android:hint="re-enter password"
         android:layout_below="@+id/passwordSignupEdt"
         android:layout_alignLeft="@+id/passwordSignupEdt"
-        android:layout_alignStart="@+id/passwordSignupEdt" />
+        android:layout_alignStart="@+id/passwordSignupEdt"
+        android:background="@drawable/roundedrectangle"
+        android:layout_marginTop="25dp" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Social Picker"
+    <ImageView
+        android:layout_width="225dp"
+        android:layout_height="50dp"
         android:id="@+id/textView"
+        android:textSize="45dp"
+        android:background="@drawable/waffletxt"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="46dp"
-        android:textSize="45dp" />
+        android:layout_alignRight="@+id/usernameSignupEdt"
+        android:layout_alignEnd="@+id/usernameSignupEdt"
+        android:layout_marginTop="25dp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -70,4 +85,57 @@
         android:layout_below="@+id/signupBtt"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="15dp"/>
+
+    <ImageView
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:id="@+id/imageView6"
+        android:src="@drawable/user_icon"
+        android:layout_alignBottom="@+id/usernameSignupEdt"
+        android:layout_alignLeft="@+id/imageView7"
+        android:layout_alignStart="@+id/imageView7"
+        android:layout_marginBottom="11dp" />
+
+    <ImageView
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:id="@+id/imageView7"
+        android:src="@drawable/lock"
+        android:layout_marginTop="12dp"
+        android:layout_alignTop="@+id/passwordSignupEdt"
+        android:layout_alignLeft="@+id/imageView8"
+        android:layout_alignStart="@+id/imageView8" />
+
+    <ImageView
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:id="@+id/imageView8"
+        android:src="@drawable/lock"
+        android:layout_alignTop="@+id/password_again_edit_text"
+        android:layout_alignRight="@+id/textView"
+        android:layout_alignEnd="@+id/textView"
+        android:layout_marginRight="11dp"
+        android:layout_marginEnd="11dp"
+        android:layout_marginTop="11dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="Username"
+        android:id="@+id/textView3"
+        android:layout_above="@+id/imageView6"
+        android:layout_alignLeft="@+id/usernameSignupEdt"
+        android:layout_alignStart="@+id/usernameSignupEdt"
+        android:layout_marginBottom="13dp" />
+
+    <ImageView
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:id="@+id/imageView9"
+        android:src="@drawable/waffleicon"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
 </RelativeLayout>
